Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34078

Android: all widget apps crash due to wrong dependency information for QtSvg

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 5.2.0 Beta1
    • 5.2.0 Beta1
    • Build System
    • None
    • Android
    • 9327c9aa7925cb2175b5481f39e48ef487da32cf, 3dcf8500f4760ba002327a598230811e2fb5d4f4 [qttools]

      On Android versions prior to 4.3: When running any widget app against the binary 5.2.0 beta1 packages, or against a current build that includes the svg module, the app aborts with the message "libQt5Widgets.so not found"

      The problem is that we try to load libQt5Svg library before libQt5Widgets: libs.xml lists the libraries in the wrong order. Changing the order and running ant debug/ant installd from the command line will install a working package.

      The same app (even the same APK) works fine against Android 4.3, indicating that Google may have switched to lazy link resolution

      UPDATE: The problems seems unrelated to Qt5Svg-android-dependencies.xml

      UPDATE: There seems to be a bug in the readDependencies logic in androiddeployqt

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tvete Paul Olav Tvete
            tvete Paul Olav Tvete
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes