androiddeployqt: fix dependencies of plugins

The dependency resolver is based on a recursive descent of
the dependency tree. Plugins depend on the libraries, so they
have to be handled after the libraries have been resolved.

The simplest solution is to do multiple passes over the unmet
dependencies from the plugin.

Task-number: QTBUG-34078

Change-Id: I02d8d7c86f77f6c23832a6e301567796b412c5aa
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@digia.com>